--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="Ali Bigdeli">
+    <meta name="author" content="Mehran Mohammadi">
     <meta name="generator" content="Hugo 0.88.1">
     <title>{% block title %} {% endblock %}</title>
 
@@ -27,10 +27,10 @@
     {% block content %}{% endblock %}
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    {% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
-    {% block extra_js %}{% endblock %}
+        crossorigin="anonymous"></script> {% endcomment %}
+    {% comment %} {% block extra_js %}{% endblock %} {% endcomment %}
 </body>
 
 </html>
